# datafun-01-foundations

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CITATION.cff  README.md  SE_MANIFEST.toml  lychee.toml  mkdocs.yaml  pyproject.toml  ruff.strict.toml
.devcontainer/: DEV_CONTAINER.md  devcontainer_OPTION.json
.github/: dependabot.yml
.github/workflows/: ci-python-mkdocs.yml  ci.yml  deploy-docs.yml  deploy-mkdocs.yml  links.yml
docs/: example-output.md  guides.md  index.md  pro-tips.md  project-mkdocs.md  variables.md
docs/root/: INSTRUCTORS.md  SKILLS.md
src/datafun_01_foundations/: app_case.py  app_danilotraconis.py  app_yourname.py
tests/: test_app_case.py  test_app_yourname.py
