# ============================================================
# pyproject.toml (Python and MkDocs project configuration)
# ============================================================

# REQ.PYTHON: Python projects MUST include pyproject.toml as the single source of truth.
# WHY: Centralizes project configuration.

[project]
name = "datafun-01-foundations" # CUSTOM: Package distribution name (use lowercase and dashes).
version="0.1.0"  # WHY: start with initial version.
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # REQ.DEPS: External packages used by the project code.
    "datafun-toolkit>=0.9.0",
]

[project.optional-dependencies]
# WHY: Optional dependency groups keep the core install clean and focused.
dev = [
    # REQ.DEV.DEPS: External packages used for linting, testing, type checking, etc.
    "bandit>=1.9.2",
    "packaging>=25.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "validate-pyproject>=0.24.1",
]

docs = [
    # REQ.DOCS.DEPS: External packages used to generate project documentation.
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
]

# === PYRIGHT (TYPE CHECKING HELPS FIND COMMON ERRORS BEFORE THE CODE RUNS) ===

[tool.pyright]
# CUSTOM: Pyright configuration for static type checking.
# This configuration is NOT enforced by CI or pre-commit.
# It is provided for instructors and advanced users who
# explicitly run pyright. It is optional.
# WHY: Strict type checking helps catch bugs early.
include = ["src"]
extraPaths = ["src"]
exclude = [ "**/node_modules", "**/.*", ".venv","**/__pycache__","dist","build"]
pythonVersion = "3.14"
reportMissingImports = "warning"
reportPrivateUsage = "none"
typeCheckingMode = "strict" # strict | basic | off
useLibraryCodeForTypes = false
venv = ".venv"
venvPath = "."

# === PYTEST (VERIFY LOGIC) ===

[tool.pytest.ini_options]
# WHY: Ensure tests are discoverable and coverage is visible.
minversion = "7.0"
testpaths = ["tests"]
addopts = " --cov=src --cov-report=term-missing"

# === RUFF (PYTHON FORMATTING AND LINTING) ===

[tool.ruff]
# WHY: Ruff provides fast linting and formatting with deterministic output.
exclude = [
    ".eggs",
    "*.egg-info",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "site",
]
line-length = 88 # WHY: PEP 8 standard line length, wrap when possible.
preview = false # WHY: Stable features only; avoid preview features.
target-version = "py312"
unsafe-fixes = false # WHY: Avoid potentially unsafe automatic fixes.

[tool.ruff.format]
# WHY: Formatter choices should be stable to keep diffs small and predictable.
indent-style = "space" # See also .gitattributes for indent style.
line-ending = "auto" # Match existing files and let .gitattributes handle it.
quote-style = "preserve" # Preserve existing quote styles to minimize churn.

[tool.ruff.lint]
# WHY: Professional baseline rules without requiring advanced refactors.
select = [
    "E",   # Basic syntax and structural correctness
    "F",   # Undefined names and unused imports
    "W",   # Warnings that catch easy issues early
    "I",   # Deterministic import ordering
    "UP",  # Modern Python constructs
    "B",   # Common bug patterns
    "PTH", # Prefer pathlib patterns
]
ignore = [
  "E501", # Final line length handled by formatter
]

[tool.ruff.lint.isort]
# WHY: Ordering imports helps keep code diffs (differences) readable.
force-sort-within-sections = true

# === PER-FILE IGNORES (DEPENDS ON DOCSTRING POLICY) ===

[tool.ruff.lint.per-file-ignores]
# WHY: Some files MUST NOT undergo linting or automated fixes.

# POLICY: Docstring rules are NOT enabled (no "D" in [tool.ruff.lint].select).
"src/**/__init__.py" = ["F401"]     # Allow re-export patterns
"src/**/_version.py" = ["ALL"]      # Auto-generated file (do not lint)
"notebooks/**/*.ipynb" = ["F821"]   # Notebooks may have runtime-defined names

# OPTIONAL: If docstring rules are enabled later (add "D" to select),
# replace the block above with the following:
#
# [tool.ruff.lint.per-file-ignores]
# "src/**/__init__.py" = ["D104", "F401"]    # Allow omission + re-export patterns
# "src/**/_version.py" = ["ALL"]             # Auto-generated file (do not lint)
# "tests/**/*.py" = ["D"]                    # Tests have different docstring norms
# "notebooks/**/*.ipynb" = ["F821"]          # Notebooks may have runtime-defined names

# === CHOOSE PROJECT DOC STYLE ===

[tool.ruff.lint.pydocstyle]
# WHY: Choose one docstring convention project-wide to avoid mixed styles and churn.
# REQ: Google style is the default policy for this repository.
convention = "google" # ALT: "numpy" (choose one convention project-wide)


# === BUILD SYSTEM ===

# REQ.BUILD:
# - `build-backend` must be a build backend (setuptools or hatchling).
# - `setuptools_scm` is a versioning plugin, not the build backend.

# === BUILD SYSTEM ===

# This repository includes scripts that are not standalone: they import shared
# modules from a package under `src/`. To make imports reliable across IDEs,
# tests, and CI, the code must be importable as a real package.

# We use a `src/` layout and configure setuptools package discovery so imports work
# because the package is installed (often in editable mode during development).

# Why:
# - Scripts can import shared code via normal package imports (no path hacks).
# - Prevents accidental imports from the repository root, a common pitfall.
# - Makes type checking, testing, and CI behavior consistent.

# Tradeoff:
# - Introduces light packaging configuration (build backend and package discovery).
#   This is intentional and required when the project contains shared modules,
#   rather than simply a set of completely standalone scripts.

[build-system]
# WHY: Define the build backend and minimum build requirements.
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.9.0"]

[tool.setuptools]
package-dir = { "" = "src" } # WHY: src-layout keeps code separate from config and docs.

[tool.setuptools.packages.find]
where = ["src"] # WHY: Explicitly define package discovery location.
